# hydra-agent-orchestrator

./: .gitignore  CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  clean-build  research.md  run-app
.github/workflows/: ci.yml  release.yml
crates/hydra-app/: Cargo.toml  build.rs  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.ts
crates/hydra-app/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
crates/hydra-app/frontend/scripts/: enforce-design-tokens.mjs
crates/hydra-app/frontend/src/: App.tsx  ipc.ts  main.tsx  types.ts  vite-env.d.ts
crates/hydra-app/frontend/src/__tests__/: setup.ts  smoke.test.tsx
crates/hydra-app/frontend/src/components/: AgentRail.tsx  CandidateDiffReview.tsx  CockpitCenter.tsx  CockpitShell.tsx  CompletionSummary.tsx  ExperimentalAdapterModal.tsx  FileExplorer.tsx  InputComposer.tsx  InteractiveSessionRail.tsx  InteractiveTerminalPanel.tsx  InteractiveWorkspace.tsx  LeaderboardRail.tsx  LiveOutputPanel.tsx  PreflightDashboard.tsx  ResultsScoreboard.tsx  XTermRenderer.tsx
crates/hydra-app/frontend/src/components/design-system/: Badge.tsx  Button.tsx  Card.tsx  Modal.tsx  Panel.tsx  ProgressBar.tsx  Tabs.tsx  index.ts
crates/hydra-app/frontend/src/hooks/: index.ts  useAgentStatuses.ts  useEventBuffer.ts  usePreflight.ts
crates/hydra-app/frontend/src/styles/: global.css  tokens.css
crates/hydra-app/src/: App.tsx  commands.rs  ipc.ts  ipc_types.rs  lib.rs  main.rs  state.rs
crates/hydra-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/hydra-app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
crates/hydra-app/src/components/: AdapterBadge.tsx  ScoreCard.tsx  StatusBadge.tsx
crates/hydra-app/src/pages/: DiffPage.tsx  DoctorPage.tsx  RacePage.tsx  ResultsPage.tsx
crates/hydra-app/src/types/: index.ts
crates/hydra-cli/: Cargo.toml
crates/hydra-cli/src/: doctor.rs  main.rs  merge.rs  race.rs  run.rs
crates/hydra-cli/tests/: merge_integration.rs
crates/hydra-core/: Cargo.toml
crates/hydra-core/src/: budget.rs  config.rs  doctor.rs  error.rs  git_exec.rs  git_ref.rs  lib.rs  merge.rs  migration.rs  observability.rs  orchestrator.rs  recovery.rs  worktree.rs
crates/hydra-core/src/adapter/: claude.rs  codex.rs  cursor.rs  error.rs  experimental.rs  mod.rs  probe.rs  registry.rs  runtime.rs  types.rs
crates/hydra-core/src/artifact/: error.rs  events.rs  layout.rs  manifest.rs  mod.rs  retention.rs  run_dir.rs  schema.rs  session.rs
crates/hydra-core/src/config/: mod.rs  schema.rs
crates/hydra-core/src/platform/: mod.rs  paths.rs  process.rs
crates/hydra-core/src/scoring/: baseline.rs  build.rs  composite.rs  cost.rs  diff_scope.rs  lint.rs  mod.rs  ranking.rs  speed.rs  tests.rs
crates/hydra-core/src/security/: mod.rs  redact.rs  redaction.rs  sandbox.rs
crates/hydra-core/src/supervisor/: mod.rs  parallel.rs  pty.rs  single.rs
crates/hydra-core/src/workflow/: engine.rs  mod.rs
crates/hydra-core/src/workflow/presets/: builder_reviewer.rs  iterative.rs  mod.rs  specialization.rs
crates/hydra-core/src/worktree/: mod.rs
crates/hydra-core/tests/: acceptance_tests.rs  adapter_runtime.rs  interrupt_recovery.rs  interrupt_tests.rs  race_integration.rs  workflow_tests.rs
crates/hydra-core/tests/fixtures/adapters/claude/: help.txt  stream-json.ok.jsonl
crates/hydra-core/tests/fixtures/adapters/codex/: exec-json.ok.jsonl  help.txt
crates/hydra-core/tests/fixtures/adapters/cursor/: help.txt  stream-json.sample.jsonl
docs/: agent-adapters.md  architecture.md  collaboration-workflows.md  competitive-analysis.md  scoring-engine.md
instructions/: README.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
planning/: audit.md  github-issues.md  implementation-checklist.md  local-execution-conventions.md  m4.7-desktop-ui-contract.md  m4.7-local-execution-pack.md  m4.8-interactive-desktop-ui-contract.md  m4.8-interactive-orchestration-pack.md  missing-issues-remediation-plan.md  p3-ui05-p3-qa01-implementation-guide.md  p4-interactive-orchestration-console-implementation-guide.md  p4-interactive-session-implementation-guide.md  p4-race-cockpit-convergence-implementation-guide.md  p4.9.6-streaming-performance-pack.md  p4.9.8-multi-workspace-thread-pack.md  p4.9.9-branch-compare-review-pack.md  p5-collaboration-workflows-implementation-guide.md  roadmap.md  sprint-1-cut.md
planning/issues/: README.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md
research/: agent-adapters.md  architecture.md  audit.md  collaboration-workflows.md  competitive-analysis.md  github-issues.md  implementation-checklist.md  roadmap.md  scoring-engine.md  sprint-1-cut.md  tech-stack.md
research/issues/: README.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md
scripts/: clean-build.sh
