[package]
name = "hydra-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
hydra-core = { path = "../hydra-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-build = { version = "2", features = [] }

[dependencies]
hydra-core = { path = "../hydra-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
