[package]
name = "hydra-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "hydra"
path = "src/main.rs"

[dependencies]
hydra-core = { path = "../hydra-core" }
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
