[package]
name = "hydra-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "hydra"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hydra-core = { path = "../hydra-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
