[package]
name = "hydra-core"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
toml.workspace = true
regex.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
