[package]
name = "hydra-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "signal", "fs", "sync"] }
toml = "0.8"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
which = "7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }
