[package]
name = "hydra-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
hydra-core = { path = "../../hydra-core" }
tauri.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[build-dependencies]
tauri-build.workspace = true

[lib]
name = "hydra_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"
